--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -2,37 +2,85 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #28293E;
+  min-height: 80px;
+}
+
+.App-portfolio {
+  background-color: #FDF0E9;
+  min-height: 250px;
+}
+
+.Portfolio-title {
+  margin: 0px;
+  max-width: 100%;
   display: flex;
-  flex-direction: column;
+  margin-left: 15px;
+  font-size: 2.5em;
+}
+
+.Portfolio-name {
+  display: flex;
+  margin-left: 15px;
+  margin-top: 5px;
+}
+
+.Portfolio-group {
+  margin-top: 5px;
+  display: flex;
+}
+
+.Portfolio-image {
+  width: 150px;
+  height: 150px;
+  background: #D9D9D9;
+  margin-left: 15px;
+}
+
+.Portfolio-group2 {
+  display: grid;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.Portfolio-birthday {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Portfolio-language {
+  display: flex;
+}
+
+.Portfolio-thing {
+  display: flex;
+}
+
+.App-career {
+  background-color: white;
+}
+
+.title {
+  background-color: #FDF0E9;
+  min-height: 300px;
+}
+
+.Career-title {
+  margin: 0px;
+  max-width: 100%;
+  margin-left: 15px;
+  font-size: 2.5em;
+}
+
+.Career-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.Career-pj {
+  text-align: center;
+  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 1.3rem;
 }
